added get payment info route
